[package]
name = "js_evaluator"
edition = '2018'
version = "0.1.0"
authors = ["Peter Hrvola <peter.hrvola@hotmail.com>"]

[dependencies]
js_parser = { path = "../parser" }
gc = "0.3.2"
gc_derive = "0.3.2"

[dev-dependencies]
pretty_assertions = "0.5"
test262_parser_tests = { path = "../test262_parser_tests" }
timebomb = "0.1.2"
