[package]
name = "javascript_lexer"
version = "0.1.0"
authors = ["retep007 <peter.hrvola@hotmail.com>"]
repository = "https://github.com/retep007/javascript-es9-parser/tree/master/components/javascript_lexer"
license = "MIT"
description = "Javascript lexer focusing on speed"
edition = "2018"

[dependencies]
internship = "0.6.0"

[dev-dependencies]
pretty_assertions = "0.5"
# clippy =  "0.0.21"

[profile.release]
lto = true

[profile.bench]
debug = true
lto = true

[features]
default = []